# expense_sorter

./: .gitignore  README.md  pyproject.toml
expense_sorter/: main.py
expense_sorter/models/: detr.py  img.py
expense_sorter/utils/: img.py
tests/: test_input.py
